fixed spacing between footer & grid

--- a/styles/queries.css
+++ b/styles/queries.css
@@ -46,7 +46,7 @@
   .container {
     max-width: 110rem;
     margin: 0 auto;
-    margin-bottom: 6rem;
+    margin-bottom: 2rem;
   }
 
   .images-box {
